Added new chat bot controller and view. Also added new forms for user login, registration
