# storage/api-docs/api-docs.json
@@ -6,6 +6,47 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/chatbot": {
+            "post": {
+                "tags": [
+                    "Chatbot"
+                ],
+                "summary": "Chat with the AI-powered assistant",
+                "operationId": "c6c19830d4441a9df5b7c7dbac2187de",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "user_id": {
+                                        "description": "User's ID",
+                                        "type": "integer"
+                                    },
+                                    "message": {
+                                        "description": "User's message to the chatbot",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Chatbot response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "tags": [
@@ -623,6 +664,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Chatbot",
+            "description": "Chatbot"
+        },
         {
             "name": "Users",
             "description": "Users"
